--- a/final.css
+++ b/final.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 * {
   margin: 0;
   padding: 0;
@@ -59,6 +58,14 @@ header nav a:hover {
 header nav img {
   height: 100px;
   padding-left: 60px;
+}
+
+.primary-statement {
+	font-size: 40px;
+}
+
+.secondary-statement {
+	font-size: 25px;
 }
 
 /* Lead Section */
