--- a/final.css
+++ b/final.css
@@ -16,6 +16,11 @@ body {
 
 h1 {
 	text-align: center;
+	font-size: 50px;
+}
+
+h2 {
+	font-size: 30px;
 }
 
 .wrapper {
@@ -52,27 +57,20 @@ header nav li {
 }
 
 header nav a {
-  color: #cbe1ff;
+  color: white;
   text-decoration: none;
   font-weight: bold;
   font-size: 1rem;
 }
 
 header nav a:hover {
-  color: white;
+  color: lightgray;
 }
 header nav img {
   height: 100px;
   padding-left: 60px;
 }
 
-.primary-statement {
-	font-size: 40px;
-}
-
-.secondary-statement {
-	font-size: 25px;
-}
 
 /* Lead Section */
 .lead {
@@ -81,15 +79,15 @@ header nav img {
 }
 
 .lead h1 {
-  font-size: 2.5rem;
+  font-size: 50px;
   color: white;
   margin: 20px 0 10px;
   ;
 }
 
 .lead h2 {
-  font-size: 1.5rem;
-  color: black;
+  font-size: 30px;
+  color: white;
   margin-bottom: 20px;
   font-style: italic;
 }
@@ -171,7 +169,7 @@ a {
 /* Footer */
 footer {
   background-color: #CB393C;
-  color: #cbe1ff;
+  color: white;
   text-align: center;
   padding: 20px 0;
   margin-top: 60px;
