--- a/final.css
+++ b/final.css
@@ -213,27 +213,76 @@ article {
 
 /* gallery grid CSS */
         
-	.map-grid {
-		display: grid;
-		grid-template-columns: auto auto;
-		grid-row-gap: 30px ;
-		justify-items: center;
-		align-items: start;
-		justify-content: space-around;
-	}
+.map-grid {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-row-gap: 60px ;
+	justify-items: center;
+	align-items: start;
+	justify-content: space-around;
+}
 
-	.map-item {
-		width: 300px; /*should match the width of your images + width of border (if any) */
-		text-align: center;
-	} 
+.map-item {
+	width: 300px; /*should match the width of your images + width of border (if any) */
+	text-align: center;
+} 
 
 /* css for styling the p/caption under the image */       
-	.map-item p {
-		margin: .25em 0;
-		line-height: 135%;
-		font-size: 90%;
-	}
+.map-item p {
+	margin: .25em 0;
+	line-height: 135%;
+	font-size: 90%;
+}
 
 .map-item img {
 	width: 90%;
 }
+
+.worldmap {
+	width: 900px;
+	height: 600px;
+	border: solid #5a5a5a 1px;
+	background: url("finalImgs/worldmap.jpeg") no-repeat;
+	background-size: 900px 600px;
+	padding: 0;
+	margin: 0; /* adjust as needed */
+	position: relative; /* needed for positioning the icons */
+}
+
+.worldmap-item {
+			font-size: 24px;  /* controls the size of the icon */
+			position: absolute;
+}
+		
+#worldmap-item-longisland {
+	top: 376px;
+	left: 750px;
+	}
+
+#worldmap-item-blairstown {
+	top: 400px;
+	left: 570px;
+	}
+
+#worldmap-item-haddonfield {
+	top: 500px;
+	left: 600px;
+	}
+
+#worldmap-item-manhattan {
+	top: 385px;
+	left: 675px;
+	}
+
+#worldmap-item-hackensack {
+	top: 390px;
+	left: 650px;
+	}
+
+.icon-blue {color:gray;}
+.icon-blue span {display: none;}
+.icon-blue:hover span {display: inline;}
+.icon-blue:hover {color:red;}
+
+.worldmap-item span {font-size: 10px; color: #f32196; float: right; background: #efecb4; padding: 3px; margin-left: 3px;}
+		
