--- a/final.css
+++ b/final.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Franklin Gothic", "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+  font-family: sans Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
   background-color: black;
   color:white;
   line-height: 2;
@@ -15,16 +15,6 @@ body {
 }
 
 h1 {
-	text-align: center;
-	font-size: 50px;
-}
-
-h2 {
-	font-size: 30px;
-}
-
-h3 {
-	font-size: 25px;
 	text-align: center;
 }
 
@@ -62,20 +52,27 @@ header nav li {
 }
 
 header nav a {
-  color: white;
+  color: #cbe1ff;
   text-decoration: none;
   font-weight: bold;
   font-size: 1rem;
 }
 
 header nav a:hover {
-  color: lightgray;
+  color: white;
 }
 header nav img {
   height: 100px;
   padding-left: 60px;
 }
 
+.primary-statement {
+	font-size: 40px;
+}
+
+.secondary-statement {
+	font-size: 25px;
+}
 
 /* Lead Section */
 .lead {
@@ -84,19 +81,23 @@ header nav img {
 }
 
 .lead h1 {
-  font-size: 50px;
+  font-size: 2.5rem;
   color: white;
   margin: 20px 0 10px;
   ;
 }
 
 .lead h2 {
-  font-size: 30px;
-  color: white;
+  font-size: 1.5rem;
+  color: black;
   margin-bottom: 20px;
   font-style: italic;
 }
 
+img {
+	max-width: 100%;
+  	height: auto;
+}
 
 .intro-text {
   max-width: 800px;
@@ -117,25 +118,6 @@ a {
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 50px;
-}
-
-.mapflex {
-  display: flex;
-  gap: 100px;
-  justify-content: space-between;
-  flex-wrap:wrap;
-  margin-top: 50px;
-}
-
-.mapflex-item {
-  background-color: black;
-  border: 3px solid #CB393C;
-  border-radius: 10px;
-  padding: 20px;
-  flex: 1 1 30%;
-  text-align: center;
-  box-shadow: 0 4px 6px rgba(79, 46, 99, 0.548);
-  transition: transform 0.2s ease;
 }
 
 .showcase-item {
@@ -189,7 +171,7 @@ a {
 /* Footer */
 footer {
   background-color: #CB393C;
-  color: white;
+  color: #cbe1ff;
   text-align: center;
   padding: 20px 0;
   margin-top: 60px;
@@ -230,113 +212,3 @@ article {
 .gallery-item img {
 	width: 90%;
 }
-
-/* gallery grid CSS */
-        
-.map-grid {
-	display: grid;
-	grid-template-columns: auto auto;
-	grid-row-gap: 60px ;
-	justify-items: center;
-	align-items: start;
-	justify-content: center;
-}
-
-.map-item {
-	width: 400px; /*should match the width of your images + width of border (if any) */
-	text-align: center;
-	align-content: center;
-} 
-
-/* css for styling the p/caption under the image */       
-.map-item p {
-	margin: .25em 0;
-	line-height: 135%;
-	font-size: 90%;
-	align-content: center;
-}
-
-.map-item img {
-	width: 90%;
-	align-content: center;
-}
-
-.worldmap {
-	width: 1110px;
-	height: 740px;
-	border: solid #5a5a5a 1px;
-	background: url("finalImgs/map.jpg") no-repeat;
-	background-size: 1110px 740px;
-	padding: 0;
-	transform: translate(-6%);
-	margin: 0; /* adjust as needed */
-	position: relative; /* needed for positioning the icons */
-}
-
-.worldmap-item {
-			font-size: 16px;  /* controls the size of the icon */
-			position: absolute;
-}
-		
-#worldmap-item-longisland {
-	top: 352px;
-	left: 905px;
-	}
-
-#worldmap-item-blairstown {
-	top: 358px;
-	left: 865px;
-	}
-
-#worldmap-item-manhattan {
-	top: 360px;
-	left: 892px;
-	}
-
-#worldmap-item-hackensack {
-	top: 351px;
-	left: 880px;
-	}
-
-#worldmap-item-haddonfield {
-	top: 383px;
-	left: 868px;
-	}
-
-#worldmap-item-vancouver {
-	top: 90px;
-	left: 145px;
-	}
-
-#worldmap-item-toronto {
-	top: 300px;
-	left: 780px;
-	}
-
-#worldmap-item-tomsriver {
-	top: 375px;
-	left: 885px;
-	}
-
-#worldmap-item-southpasadena {
-	top: 440px;
-	left: 95px;
-	}
-
-.icon-blue {color:cornflowerblue;}
-.icon-blue span {display: none;}
-.icon-blue:hover span {display: inline;}
-.icon-blue:hover {color:#CB393C;}
-
-.icon-gray {color:lightseagreen;}
-.icon-gray span {display: none;}
-.icon-gray:hover span {display: inline;}
-.icon-gray:hover {color:#CB393C;}
-
-.icon-red {color:firebrick;}
-.icon-red span {display: none;}
-.icon-red:hover span {display: inline;}
-.icon-red:hover {color:#CB393C;}
-
-.worldmap-item span {font-family: "Franklin Gothic", "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif"; font-size: 16px; color: white; float: right; background: #241714; padding: 8px; margin: 1px; transform: translate(-50%, -120%);}
-		
